--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="./css/estilos.css">
   </head>
   <body>
-<h1 style="text-align:center;">Receta de bondiola a la cerveza</h1>
-<br>
+<header>
+  <h1 style="text-align:center;">Receta de bondiola a la cerveza</h1>
+</header>
 <audio controls autoplay>
  <source src="./audio/korolova-bad-memories.mp3" type="audio/mpeg">
 </audio>
-<br>
-<h2>Guia basica para la preparacion de bondiola a la cerveza</h2>
-<br>
-<img src="./imagenes/bondiola.jpg" alt="foto bondiola">
+<nav>
+  <h2>Guia basica para la preparacion de bondiola a la cerveza</h2>
+</nav>
 <br>
 <p>Esta receta puede ser un poco larga en la preparación,
  pero simple… y muy sabrosa.
@@ -25,44 +25,50 @@ de bondiola de cerdo. Este corte es conocido con este nombre en
 el Río de la Plata. Corresponde a la zona del lomo que sigue inmediatamente el
 cuello, antes de que comience el carré. Habrá que identificar el corte con su
 nombre en otros países sudamericanos.</p>
-</body>
-<h2>Lista de ingredientes</h2>
+<section>
+  <img src="./imagenes/bondiola.jpg" alt="foto bondiola">
+</section>
+<br>
+<br>
+<aside class="">
+  <h2>Lista de ingredientes</h2>
+  <ul>
+    <li> 1 bondiola</li>
+    <li> 4 cebollas</li>
+    <li> 1 morron rojo</li>
+    <li> 1 morron verde</li>
+    <li> 1 cebolla de verdeo</li>
+    <li> 1/2 kg papas</li>
+    <li> 2 zanahorias</li>
+    <li> 4 dientes de ajo</li>
+    <li> sal y pimienta a gusto</li>
+    <li> 1 1/2 lt cerveza negra</li>
+  </ul>
+  <h3> Preparacion</h3>
 
-<ul>
-  <li> 1 bondiola</li>
-  <li> 4 cebollas</li>
-  <li> 1 morron rojo</li>
-  <li> 1 morron verde</li>
-  <li> 1 cebolla de verdeo</li>
-  <li> 1/2 kg papas</li>
-  <li> 2 zanahorias</li>
-  <li> 4 dientes de ajo</li>
-  <li> sal y pimienta a gusto</li>
-  <li> 1 1/2 lt cerveza negra</li>
-</ul>
+  <ol>
+    <li>Arrancamos prendiendo el fuego y poniendo a calentar el disco disco de arado.</li>
+    <li>Agregamos manteca con un poco de aceite de oliva, agreguamos sal y pimienta
+     a gusto a la bondiola y la colocamos en el disco hasta sellarla, las iremos
+     girando para que se sellen en todos sus lados, luego retiramos del fuego.</li>
+    <li>Lavá bien las verduras y cortalas en un tamaño más grande que juliana para
+     que no se deshagan en la cocción.</li>
+     <li>Añadimos un poco mas de aceite si es necesario, esperamos a que se caliente
+     y colocamos las verduras para que se vayan rehogando</li>
+     <li>Una vez cocida y doradas las verduras levantamos el fondo de cocción con
+      un poco de cerveza</li>
+    <li>Después de 5 minutos volvemos a agregar las bondiolas y agregamos más
+      cerveza a la preparación hasta tapar todo.</li>
+    <li>Deja que se evapore el alcohol mientras se cocina todo durante 15 minutos.
+      Cada tanto revolvé con cuchara de madera para que no se peguen los vegetales.</li>
+    <li>Dejar cocinar 50 minutos a 1 hs,despues todo listo a comer</li>
+  </ol>
+</aside>
+</body>
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/R51vY5xukno" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<h3> Preparacion</h3>
-
-<ol>
-  <li>Arrancamos prendiendo el fuego y poniendo a calentar el disco disco de arado.</li>
-  <li>Agregamos manteca con un poco de aceite de oliva, agreguamos sal y pimienta
-   a gusto a la bondiola y la colocamos en el disco hasta sellarla, las iremos
-   girando para que se sellen en todos sus lados, luego retiramos del fuego.</li>
-  <li>Lavá bien las verduras y cortalas en un tamaño más grande que juliana para
-   que no se deshagan en la cocción.</li>
-   <li>Añadimos un poco mas de aceite si es necesario, esperamos a que se caliente
-   y colocamos las verduras para que se vayan rehogando</li>
-   <li>Una vez cocida y doradas las verduras levantamos el fondo de cocción con
-    un poco de cerveza</li>
-  <li>Después de 5 minutos volvemos a agregar las bondiolas y agregamos más
-    cerveza a la preparación hasta tapar todo.</li>
-  <li>Deja que se evapore el alcohol mientras se cocina todo durante 15 minutos.
-    Cada tanto revolvé con cuchara de madera para que no se peguen los vegetales.</li>
-  <li>Dejar cocinar 50 minutos a 1 hs,despues todo listo a comer</li>
-</ol>
 <br>
 <br>
-<h2> Ubicacion </h2>
+<footer> <h2> Ubicacion </h2>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104722.53784895386!2d-58.21431742556299!3d-34.89190895391006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2de7dcfe08117%3A0x138071d3f8e9721e!2sCity%20Bell%2C%20Provincia%20de%20Buenos%20Aires%2C%20Argentina!5e0!3m2!1ses-419!2spt!4v1682963348899!5m2!1ses-419!2spt" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</html>
+</html> </footer>
